add build ver to title